--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -12,9 +12,9 @@
 
     <properties>
         <!-- Web dependencies -->
-        <webjars-bootstrap.version>3.3.6</webjars-bootstrap.version>
-        <webjars-jquery-ui.version>1.11.4</webjars-jquery-ui.version>
-        <webjars-jquery.version>2.2.4</webjars-jquery.version>
+        <webjars-bootstrap.version>5.2.3</webjars-bootstrap.version>
+        <webjars-jquery-ui.version>1.13.2</webjars-jquery-ui.version>
+        <webjars-jquery.version>3.6.4</webjars-jquery.version>
         <wro4j.version>1.8.0</wro4j.version>
     </properties>
 
@@ -91,8 +91,13 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>2.22.0</version>
+            <version>5.2.0</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>javax.persistence-api</artifactId>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
