--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.banner.image.location=vizsla.jpg
+#spring.banner.image.location=vizsla.jpg
 server.port = 9090
 
 # Internationalization
 spring.messages.basename=messages/messages
 
-spring.profiles.active=springdatajpa
+#spring.profiles.active=springdatajpa
